<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMI体质计算器</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tall">身高（cm）：</string>
    <string name="intputall">请输入身高</string>
    <string name="weight">体重（kg ）：</string>
    <string name="inputweight">请输入体重</string>
    <string name="contact">计算</string>

</resources>
